smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata-must-come-before-namespace.smithy
// Parse error at line 5, column 9 near ` foo`: Metadata statements must appear before a namespace statement
$version: "1.0"
namespace com.foo

metadata foo = "hello"
